--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,28 @@
+anyio==3.3.0
 appdirs==1.4.4
 appnope==0.1.2
+argon2-cffi==20.1.0
+async-generator==1.10
 attrs==21.2.0
 autoflake==1.4
+Babel==2.9.1
 backcall==0.2.0
 black==21.5b1
+bleach==4.0.0
 CacheControl==0.12.6
 cachy==0.3.0
 certifi==2020.12.5
+cffi==1.14.6
 chardet==4.0.0
 cleo==0.8.1
 click==8.0.0
 clikit==0.6.2
 crashtest==0.3.1
+debugpy==1.4.1
 decorator==5.0.9
+defusedxml==0.7.1
 distlib==0.3.1
+entrypoints==0.3
 epc==0.0.5
 filelock==3.0.12
 flake8==3.9.2
@@ -21,18 +30,37 @@ flake8-mypy==17.8.0
 html5lib==1.1
 idna==2.10
 importmagic==0.1.7
+ipykernel==6.1.0
 ipython==7.23.1
 ipython-genutils==0.2.0
 jedi==0.18.0
+Jinja2==3.0.1
 json-rpc==1.13.0
+json5==0.9.6
+jsonschema==3.2.0
+jupyter-client==6.1.12
+jupyter-core==4.7.1
+jupyter-server==1.10.2
+jupyterlab==3.1.6
+jupyterlab-pygments==0.1.2
+jupyterlab-server==2.7.0
 keyring==21.8.0
 lockfile==0.12.2
+MarkupSafe==2.0.1
 matplotlib-inline==0.1.2
 mccabe==0.6.1
+mistune==0.8.4
 msgpack==1.0.2
 mypy==0.812
 mypy-extensions==0.4.3
+nbclassic==0.3.1
+nbclient==0.5.3
+nbconvert==6.1.0
+nbformat==5.1.3
+nest-asyncio==1.5.1
+notebook==6.4.3
 packaging==20.9
+pandocfilters==1.4.3
 parso==0.8.2
 pastel==0.2.1
 pathspec==0.8.1
@@ -41,22 +69,34 @@ pickleshare==0.7.5
 pkginfo==1.7.0
 poetry==1.1.6
 poetry-core==1.0.3
+prometheus-client==0.11.0
 prompt-toolkit==3.0.18
 ptyprocess==0.7.0
 pycodestyle==2.7.0
+pycparser==2.20
 pyflakes==2.3.1
 Pygments==2.9.0
 pylev==1.3.0
 pyparsing==2.4.7
+pyrsistent==0.18.0
+python-dateutil==2.8.2
+pytz==2021.1
+pyzmq==22.2.1
 regex==2021.4.4
 requests==2.25.1
 requests-toolbelt==0.9.1
+requests-unixsocket==0.2.0
+Send2Trash==1.8.0
 service-factory==0.1.6
 sexpdata==0.0.3
 shellingham==1.4.0
 six==1.16.0
+sniffio==1.2.0
+terminado==0.11.0
+testpath==0.5.0
 toml==0.10.2
 tomlkit==0.7.0
+tornado==6.1
 traitlets==5.0.5
 typed-ast==1.4.3
 typing-extensions==3.10.0.0
@@ -64,3 +104,4 @@ urllib3==1.26.5
 virtualenv==20.4.6
 wcwidth==0.2.5
 webencodings==0.5.1
+websocket-client==1.2.0
