--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alabaster==0.7.12
 anyio==3.3.0
 appdirs==1.4.4
 appnope==0.1.2
@@ -22,6 +23,7 @@ debugpy==1.4.1
 decorator==5.0.9
 defusedxml==0.7.1
 distlib==0.3.1
+docutils==0.17.1
 entrypoints==0.3
 epc==0.0.5
 filelock==3.0.12
@@ -29,10 +31,13 @@ flake8==3.9.2
 flake8-mypy==17.8.0
 html5lib==1.1
 idna==2.10
+imagesize==1.2.0
 importmagic==0.1.7
 ipykernel==6.1.0
-ipython==7.23.1
+ipyparallel==6.3.0
+ipython==7.26.0
 ipython-genutils==0.2.0
+ipywidgets==7.6.3
 jedi==0.18.0
 Jinja2==3.0.1
 json-rpc==1.13.0
@@ -44,6 +49,7 @@ jupyter-server==1.10.2
 jupyterlab==3.1.6
 jupyterlab-pygments==0.1.2
 jupyterlab-server==2.7.0
+jupyterlab-widgets==1.0.0
 keyring==21.8.0
 lockfile==0.12.2
 MarkupSafe==2.0.1
@@ -55,10 +61,12 @@ mypy==0.812
 mypy-extensions==0.4.3
 nbclassic==0.3.1
 nbclient==0.5.3
-nbconvert==6.1.0
+nbconvert==5.6.1
 nbformat==5.1.3
 nest-asyncio==1.5.1
+nose==1.3.7
 notebook==6.4.3
+numpy==1.21.1
 packaging==20.9
 pandocfilters==1.4.3
 parso==0.8.2
@@ -82,6 +90,8 @@ pyrsistent==0.18.0
 python-dateutil==2.8.2
 pytz==2021.1
 pyzmq==22.2.1
+qtconsole==5.1.1
+QtPy==1.9.0
 regex==2021.4.4
 requests==2.25.1
 requests-toolbelt==0.9.1
@@ -92,6 +102,14 @@ sexpdata==0.0.3
 shellingham==1.4.0
 six==1.16.0
 sniffio==1.2.0
+snowballstemmer==2.1.0
+Sphinx==4.1.2
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
 terminado==0.11.0
 testpath==0.5.0
 toml==0.10.2
@@ -105,3 +123,4 @@ virtualenv==20.4.6
 wcwidth==0.2.5
 webencodings==0.5.1
 websocket-client==1.2.0
+widgetsnbextension==3.5.1
