docker version updated / spacemacs to vim

--- a/docker/config.json
+++ b/docker/config.json
@@ -1,7 +1,6 @@
 {
-  "experimental" : "disabled",
-  "credsStore" : "desktop",
-  "auths" : {
-
-  }
+	"auths": {},
+	"credsStore": "desktop",
+	"experimental": "disabled",
+	"currentContext": "desktop-linux"
 }
