--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,3 +1,7 @@
+- defaults:
+    link:
+      create: true
+
 - clean: ['~']
 
 - link:
@@ -15,3 +19,4 @@
     ~/.zshrc.pre-oh-my-zsh: zshrc.pre-oh-my-zsh
     ~/.zsh_history_setup.org: zsh_history_setup.org
     ~/.vim/vimrc: vim/vimrc
+
